# Remit-Tracker

./: .env  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  go.mod  main.go  next-seo.config.js  next-sitemap.config.js  next.config.js  package.json
Spider/: README.md  pyproject.toml  scrapinghub.yml  scrapy.cfg  setup.py
Spider/remit_tracker/: items.py  middlewares.py  pipelines.py  settings.py
Spider/remit_tracker/spiders/: bmf.py  flywire.py  zolve.py
app/: app.go
client/: vite.config.js
public/: manifest.json
server/: server.go
src/lib/components/Remittance/: Chart.tsx  Stats.tsx  index.tsx
src/lib/components/layout/: Footer.tsx  Header.tsx  ThemeSelect.tsx  index.tsx
src/lib/types/: Remit.ts
src/lib/utils/: Remit.ts
src/pages/: _app.tsx  index.tsx
