[tool.poetry]
name = "remit-tracker"
version = "0.1.0"
description = ""
authors = ["Blakeinstein <rishi1998@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "remit_tracker"}]

[tool.poetry.dependencies]
python = "^3.10"
Scrapy = "^2.6.2"

[tool.poetry.group.deploy.dependencies]
shub = "^2.14.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
